--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,6 +1,6 @@
 .container-home{
     
-    height: 80vh;
+height: 80vh;
  background-image: url("https://img.freepik.com/vector-premium/ecualizador-musica-fondo-abstracto-ondas-sonido-diferentes-eventos-alegres-ilustracion-vectorial-eps-10-puede-utilizar-plantilla-presentacion-diseno-folleto-portada-revista-moskup_299644-2095.jpg?w=2000");
 background-size: contain;
 
@@ -14,4 +14,11 @@ form{
 h1{
     color: aliceblue;
 
+}
+.video{
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+   
 }
